Update Corporate Energy Consumption.ipynb

--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -3983,7 +3983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "79071c48",
    "metadata": {},
    "outputs": [
@@ -4085,6 +4085,76 @@
        "      <td>4875768</td>\n",
        "      <td>5.082011e+05</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Roads</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>183575</td>\n",
+       "      <td>3.636990e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Calgary Parking Auth</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>1563370</td>\n",
+       "      <td>3.287160e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Real Estate and Dev Serv</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>3289586</td>\n",
+       "      <td>3.075200e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Waste - Recycling Services</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>8095477</td>\n",
+       "      <td>2.737251e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Calgary Parking Auth</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>4702346</td>\n",
+       "      <td>1.882729e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Calgary Parks</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>59881773</td>\n",
+       "      <td>1.285224e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Real Estate and Dev Serv</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>4996357</td>\n",
+       "      <td>1.254142e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Calgary Parks</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>2652797</td>\n",
+       "      <td>1.058750e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Water Resources</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>8848072</td>\n",
+       "      <td>5.646867e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Water Resources</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>183575</td>\n",
+       "      <td>5.220000e+04</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -4100,7 +4170,17 @@
        "24                       Roads        Electricity   6562761       1.968599e+06\n",
        "1                CPS - Bureaus        Natural Gas   4960643       7.187340e+05\n",
        "30  Waste - Recycling Services        Natural Gas   2630732       5.587590e+05\n",
-       "0                CPS - Bureaus        Electricity   4875768       5.082011e+05"
+       "0                CPS - Bureaus        Electricity   4875768       5.082011e+05\n",
+       "25                       Roads        Natural Gas    183575       3.636990e+05\n",
+       "9         Calgary Parking Auth        Natural Gas   1563370       3.287160e+05\n",
+       "23    Real Estate and Dev Serv        Natural Gas   3289586       3.075200e+05\n",
+       "29  Waste - Recycling Services        Electricity   8095477       2.737251e+05\n",
+       "8         Calgary Parking Auth        Electricity   4702346       1.882729e+05\n",
+       "10               Calgary Parks        Electricity  59881773       1.285224e+05\n",
+       "22    Real Estate and Dev Serv        Electricity   4996357       1.254142e+05\n",
+       "11               Calgary Parks        Natural Gas   2652797       1.058750e+05\n",
+       "31             Water Resources        Electricity   8848072       5.646867e+04\n",
+       "32             Water Resources        Natural Gas    183575       5.220000e+04"
       ]
      },
      "metadata": {},
@@ -4206,10 +4286,10 @@
     "non_renewable_energy= energydata[(energydata['Energy Description'] == 'Natural Gas') | (energydata['Energy Description'] == 'Electricity')]\n",
     "renewable_energy= energydata[(energydata['Energy Description'] == 'Solar Power') | (energydata['Energy Description'] == 'Solar Thermal')]\n",
     "# Top 10 Business Unit Desc using Non renewable energy\n",
-    "grouped_non_renewable_bizunit=non_renewable_energy.groupby(['Business Unit Desc','Energy Description']).sum().reset_index().sort_values('Total Consumption', ascending=[False]).head(10)\n",
+    "grouped_non_renewable_bizunit=non_renewable_energy.groupby(['Business Unit Desc','Energy Description']).sum().reset_index().sort_values('Total Consumption', ascending=[False]).head(20)\n",
     "display(grouped_non_renewable_bizunit)\n",
     "# Top 10 Business Unit Desc using renewable energy\n",
-    "grouped_renewable_bizunit=renewable_energy.groupby(['Business Unit Desc','Energy Description']).sum().reset_index().sort_values('Total Consumption', ascending=[False]).head(10)\n",
+    "grouped_renewable_bizunit=renewable_energy.groupby(['Business Unit Desc','Energy Description']).sum().reset_index().sort_values('Total Consumption', ascending=[False]).head(20)\n",
     "display(grouped_renewable_bizunit)\n"
    ]
   },
@@ -4223,7 +4303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "c042795c",
    "metadata": {},
    "outputs": [
@@ -4255,7 +4335,12 @@
           "Calgary Transit",
           "Facility Management",
           "Roads",
-          "CPS - Bureaus"
+          "CPS - Bureaus",
+          "Waste - Recycling Services",
+          "Calgary Parking Auth",
+          "Calgary Parks",
+          "Real Estate and Dev Serv",
+          "Water Resources"
          ],
          "xaxis": "x",
          "y": [
@@ -4263,7 +4348,12 @@
           3136269.0852,
           1980460.8828,
           1968599.3832,
-          508201.1424
+          508201.1424,
+          273725.136,
+          188272.8684,
+          128522.4228,
+          125414.19,
+          56468.6748
          ],
          "yaxis": "y"
         },
@@ -4288,7 +4378,12 @@
           "Water Services",
           "Calgary Transit",
           "CPS - Bureaus",
-          "Waste - Recycling Services"
+          "Waste - Recycling Services",
+          "Roads",
+          "Calgary Parking Auth",
+          "Real Estate and Dev Serv",
+          "Calgary Parks",
+          "Water Resources"
          ],
          "xaxis": "x",
          "y": [
@@ -4296,7 +4391,12 @@
           3925488,
           3428525,
           718734,
-          558759
+          558759,
+          363699,
+          328716,
+          307520,
+          105875,
+          52200
          ],
          "yaxis": "y"
         }
