--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -532,7 +532,7 @@
     "- Solar Power Energy\n",
     "- Solar Thermal Energy\n",
     "\n",
-    "Also the units were first converted from kwh to GJ in order to observe statistics on the same unit of energy consumption. After data wrangling we found maximum consumption out of the above said three resources of energy and found that the Natural Gas is the highest source of fuel to produce energy."
+    "Also, the units were first converted from kwh to GJ in order to observe statistics on the same unit of energy consumption. After data wrangling, we found maximum consumption out of the above said three resources of energy and found that the Natural Gas is the highest source of fuel to produce energy."
    ]
   },
   {
@@ -662,7 +662,7 @@
    "id": "b9b96c45",
    "metadata": {},
    "source": [
-    "From the results we found that the maximum energy is consumed in the year 2021 is produced from Natural gas. This was also the highest ever energy consumption to date from this non-renewable resource. Furthermore we analysed that the maximum energy consumption from solar power was in 2020 at 2882.6 GJ while from solar thermal it was back in 2014 where the energy production stood at 248 GJ."
+    "From the results we found that the maximum energy is consumed in the year 2021 is produced from Natural gas. This was also the highest ever energy consumption to date from this non-renewable resource. Furthermore, we analysed that the maximum energy consumption from solar power was in 2020 at 2882.6 GJ while from solar thermal it was back in 2014 where the energy production stood at 248 GJ."
    ]
   },
   {
@@ -917,7 +917,7 @@
    "id": "aca0644b",
    "metadata": {},
    "source": [
-    "From the data obtained for the consumption of Natural Gas to produce energy we found that a total of 33472 different addresses having different facilities and business units are dependent on the non renewable resource to power there corporate offices in Calgary. Overall, there is a huge amount of reliability on Natural Gas."
+    "From the data obtained for the consumption of Natural Gas to produce energy we found that a total of 33472 different addresses having different facilities and business units are dependent on the non-renewable resource to power there corporate offices in Calgary. Overall, there is a huge amount of reliability on Natural Gas."
    ]
   },
   {
@@ -1427,7 +1427,7 @@
    "id": "2f99da24",
    "metadata": {},
    "source": [
-    "From the data obtained for the consumption of Solar Thermal Energy to produce energy we found that a total of only 67 different addresses with business unit naming Facility Management are soley dependent on solar thermal power to provide energy to there corporate offices in Calgary. Overall, this is not anywhere near to the amount of reliance we have on Natural Gas or Solar Power."
+    "From the data obtained for the consumption of Solar Thermal Energy to produce energy we found that a total of only 67 different addresses with business unit naming Facility Management are solely dependent on solar thermal power to provide energy to there corporate offices in Calgary. Overall, this is not anywhere near to the amount of reliance we have on Natural Gas or Solar Power."
    ]
   },
   {
@@ -1468,7 +1468,7 @@
    "source": [
     "#### Assumption\n",
     "\n",
-    "More then half of the energy consumed in 2020 from solar power has been consumed already in 2021 till the month of August. Hence we might assume that till the end of 2021 it could cross 2020's energy consumption."
+    "More then half of the energy consumed in 2020 from solar power has been consumed already in 2021 till the month of August. Hence, we might assume that till the end of 2021 it could cross 2020's energy consumption."
    ]
   },
   {
@@ -1508,7 +1508,7 @@
    "source": [
     "## Year-on-year energy consumption in Calgary\n",
     "\n",
-    "From the line plot we can clearly understand the dependency of energy produced from Natural gas for the city of Calgary. Here the graph shown depicts the mean value(bold line) over the years with a confidence interval(shaded area) of 95% over the years 2014 to 2021. This plot gives us a better idea on the mean energy consumption with the total accuracy of 95% for each the the resource and the total energy consumed.\n",
+    "From the line plot we can clearly understand the dependency of energy produced from Natural gas for the city of Calgary. Here the graph shown depicts the mean value(bold line) over the years with a confidence interval(shaded area) of 95% over the years 2014 to 2021. This plot gives us a better idea on the mean energy consumption with the total accuracy of 95% for each the resource and the total energy consumed.\n",
     "\n",
     "Here the mean production of energy from natural gas is almost constant. The mean production of energy from solar power has seen a growth over the years from 2014 to 2020, while there is a decline for the year 2021 but it might be due to non-availability of full data yet for the year 2021. Hence overall we can conclude that the total energy produced from solar power is increasing each year. But the same can not be said for the energy produced from solar thermal. Over the years from 2014 to 2019 there is a downward trend for the energy consumption from this resource. While we do not have any data available for the year 2020 and 2021.\n",
     "\n",
@@ -6229,7 +6229,7 @@
     "\n",
     "Alberta has energy resources including crude oil & gas, coal, renewable energy, natural gas, and more, so\n",
     "we calculated that what is the main source of resource of energy in each primary Facility in City of Calgary base on 3 main primary energies which are Electricity, Natural Gas, and Solar Power.\n",
-    "Since we will show the number for indivisual resource, we will use a origianl unit for this question."
+    "Since we will show the number for individual resource, we will use a original unit for this question."
    ]
   },
   {
@@ -8004,7 +8004,7 @@
    "metadata": {},
    "source": [
     "From the data shows that all of the primary facilities in Calgary have decreased use the electricity from 2014 to 2021. \n",
-    "BEARSPAW WATER TREATMENT PLANT and  INE CREEK WASTEWATER TREATMENT PLANT were increased the using the electricity from 2015 to 2016 but they were cut down the usage of electricity after 2016.\n",
+    "BEARSPAW WATER TREATMENT PLANT and INE CREEK WASTEWATER TREATMENT PLANT were increased the using the electricity from 2015 to 2016 but they were cut down the usage of electricity after 2016.\n",
     "Base on the violin plot, we realized that the most usage electricity facility is the Calgary Street Lighting and lowest is MUNICIPAL COMPLEX."
    ]
   },
@@ -10401,7 +10401,7 @@
    "metadata": {},
    "source": [
     "From the data shows that all of the primary facilities in Calgary have decreased use the Natural Gas from 2014 to 2021. \n",
-    "Most primay facilities were increased the using the Natural Gas in 2018 but they were cut down the usage of Natural Gas after 2018.\n",
+    "Most primary facilities were increased the using the Natural Gas in 2018 but they were cut down the usage of Natural Gas after 2018.\n",
     "Base on the violin plot, we realized that the most usage Natural Gas facility is the BONNYBROOK WASTEWATER TREATMENT PLANT and lowest is OLIVER BOWEN MAINTENANCE FACILITY."
    ]
   },
@@ -13010,8 +13010,8 @@
    "metadata": {},
    "source": [
     "From the data shows that all of the primary facilities in Calgary have decreased use the Solar Power from 2017 to 2021.\n",
-    "Only SOUTHLAND LEISURE CENTRE has started consumming the Solar Power from 2015. \n",
-    "Most primay facilities were starting consuming the Solar Power in 2018.\n",
+    "Only SOUTHLAND LEISURE CENTRE has started consuming the Solar Power from 2015. \n",
+    "Most primary facilities were starting consuming the Solar Power in 2018.\n",
     "Base on the violin plot, we realized that the most usage Solar Power facility is the SH - BLDG W (COMPOST FACILITY) and lowest is CORPORATE WAREHOUSE."
    ]
   },
@@ -13040,7 +13040,7 @@
     "Overall, we can conclude that the corporate facilities in Calgary ar highly dependent on Natural gas as their energy resource. If we try to compare it with other sources like solar power or solar thermal, we find that these two hardly accounts for 5%-10% of the total energy consumption each year.  \n",
     "But on the positive note there have been a gradual increase in use of solar power every year while the graph of natural gas has remained saturated in the past few years. \n",
     "\n",
-    "Also, the primary facilities in city of Calgary over the past years have shown a trend to consume less energy determining that these facilities are taking energy conservation steps to promote clearner environment and are moving towards clean technologies like solar power through investing and increasing energy efficiency."
+    "Also, the primary facilities in city of Calgary over the past years have shown a trend to consume less energy determining that these facilities are taking energy conservation steps to promote cleaner environment and are moving towards clean technologies like solar power through investing and increasing energy efficiency."
    ]
   }
  ],
